--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "@builderx/icons": "0.1.10",
     "@material-ui/core": "4.11.3",
     "google-map-react": "^1.1.4",
-    "infinite-react-carousel": "1.2.11",
     "material-ui-slider": "^3.0.8",
-    "pure-react-carousel": "^1.21.1",
     "react": "^16.8.6",
     "react-app-rewired": "2.1.8",
     "react-bootstrap": "1.5.0",
@@ -18,6 +16,7 @@
     "react-native-web": "0.15.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
+    "react-scrollbar": "0.5.6",
     "react-slick": "0.28.0",
     "styled-components": "^4.3.2"
   },
